--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,23 @@
-# Render akan inject DATABASE_URL otomatis via render.yaml
-DATABASE_URL=postgres://user:pass@host:5432/policast
-
-# Comma separated origins
-CORS_ORIGIN=http://localhost:5173,http://localhost:3000
-
-# Session & admin
-JWT_SECRET=change_me
-ADMIN_API_KEY=change_me
-
-# Opsional
+# Server
 PORT=8080
+NODE_ENV=development
+
+# CORS (pisahkan dengan koma kalau lebih dari 1)
+CORS_ORIGINS=https://polycast.app,https://tnemyap.app,http://localhost:5173
+
+# PostgreSQL
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/polycast
+
+# Solana
+SOLANA_RPC=https://api.mainnet-beta.solana.com
+# pakai devnet saat pengembangan:
+# SOLANA_RPC=https://api.devnet.solana.com
+
+# Program ID (sementara pakai Memo Program untuk stub)
+PROGRAM_ID=MemoSq4gqABAXKb96qnH8TysNcWxMyWCqXgDLGmfcHr
+
+# Admin API Key untuk endpoint protected (buat market, refresh odds, dll)
+ADMIN_API_KEY=supersecret_admin_key
+
+# Proof verifier mode: mock | strict
+PROOF_MODE=mock
